--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello!</title>
+        <title>My site</title>
     </head>
     <body>
-        Hello, world!
+        This is my GitHub pages website.
     </body>
 </html>
