--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>My site</title>
     </head>
     <body>
-        This is my GitHub pages website.
+        This is my GitHub Pages website.
     </body>
 </html>
